Fixed nav on mobile

--- a/app/styles/base/base.scss
+++ b/app/styles/base/base.scss
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: var(--font-sans);
-    color: #E7E3E3;
+    color: #fff;
     background: #0A0A0B;
 }
 
